feat: add product image upload api
